--- a/index.html
+++ b/index.html
@@ -1,4 +1,108 @@
-Codar.
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;1,    400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Codar</title>
+</head>
+<body class="container">
+    <header class="header">
+        <div class="logo">
+            <a href="/">Codar.</a>
+        </div>
+        <nav class="nav-bar">
+            <ul>
+                <li><a href="">Início</a></li>
+                <li><a href="">Serviços</a></li>
+                <li><a href="">Contato</a></li>
+                <li><button>Login</button></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="content">
+            <img src="/assets/video_call.png">
+            <div class="not-image">
+                <p>
+                    Alavanque seu negócio com um <br>
+                    <strong>Website incrível</strong>
+                </p>
+                <button>Solicitar orçamento</button>
+            </div>
+        </section>
+        <section class="content">
+            <div class="not-image">
+                <ul>
+                    <li>Domínio personalizado</li>
+                    <li>Hospedagem</li>
+                    <li>Site Responsivo</li>
+                    <li>Redes sociais</li>
+                    <li>Chat online</li>
+                    <li>Blog integrado</li>
+                </ul>
+                <div class="contact">
+                    <p>Nossa equipe está à disposição!</p>
+                    <input type="tel" placeholder="Celular">
+                    <button>Ligamos para você</button>
+                </div>
+            </div>
+            
+            <img src="/assets/coding_.png" >
+        </section>
+        <section class="content">
+            <div class="card">
+                <div class="icon"></div>
+                <div class="not-image">
+                    <p>
+                        Já tive experiências com outras 4 empresas da área e a Codar é sem sombra de dúvidas superior em todos os aspectos.
+                    </p>
+                    <h2>Pedro Ferreira</h2>
+                    <h3>Construtora Minari</h3>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon"></div>
+                <div class="not-image">
+                    <p>
+                        Processos bem simples e criação de um site exatamente como a minha escola queria!
+                    </p>
+                    <h2>Maria Rita</h2>
+                    <h3>Escola Criança Feliz</h3>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="item">
+            <h1 class="logo">Codar.</h1>
+            <p>Criamos websites incríveis</p>
+        </div>
+        <div class="item">
+            <h2>Sobre</h2>
+            <p>Amamos criar soluções e entregar sites incríveis</p>
+        </div>
+        <div class="item">
+            <h2>Contato</h2>
+            <p>123 Av. Manjar - Nárnia</p>
+            <p>+55 96 2321-3131</p>
+            <p>contato@codar.com</p>
+        </div>
+        <div class="item">
+            <h2>Redes sociais</h2>
+            <img src="/assets/facebook.png">
+            <img src="/assets//instagram.png">
+            <img src="/assets/twitter.png">
+        </div>
+    </footer>
+</body>
+</html>
+
+<!-- Codar.
 Início Serviços Contato Login
 Alavanque seu negócio com um
 Website incrível
@@ -25,4 +129,4 @@ Contato
 123 Av. Manjar - Nárnia
 +55 96 2321-3131
 contato@codar.com
-Redes sociais
+Redes sociais -->
