--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="container">
     <header class="header">
         <div class="logo">
-            <a href="/">Codar.</a>
+            <a href="/">Codar</a>.
         </div>
         <nav class="nav-bar">
             <ul>
@@ -27,7 +27,7 @@
     <main>
         <section class="content">
             <img src="/assets/video_call.png">
-            <div class="not-image">
+            <div class="not-image frist">
                 <p>
                     Alavanque seu negócio com um <br>
                     <strong>Website incrível</strong>
@@ -36,7 +36,7 @@
             </div>
         </section>
         <section class="content">
-            <div class="not-image">
+            <div class="not-image second">
                 <ul>
                     <li>Domínio personalizado</li>
                     <li>Hospedagem</li>
@@ -54,10 +54,10 @@
             
             <img src="/assets/coding_.png" >
         </section>
-        <section class="content">
+        <section class="content content-card">
             <div class="card">
                 <div class="icon"></div>
-                <div class="not-image">
+                <div class="card-text">
                     <p>
                         Já tive experiências com outras 4 empresas da área e a Codar é sem sombra de dúvidas superior em todos os aspectos.
                     </p>
@@ -67,7 +67,7 @@
             </div>
             <div class="card">
                 <div class="icon"></div>
-                <div class="not-image">
+                <div class="card-text">
                     <p>
                         Processos bem simples e criação de um site exatamente como a minha escola queria!
                     </p>
